# speed-dating-planner

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY_NOW.md  INSTALLATION.md  README.md  TEST_STRIPE_CHECKLIST.md  participants_test_contraintes.csv  pyproject.toml  requirements.txt  test.csv  test_12.csv  test_50.json
.ai/: shard_architecture.py
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.streamlit/: secrets.toml.example
app/: README.md  auth.py  main.py  stripe_integration.py
app/.streamlit/: config.toml
app/pages/: 1_📊_Dashboard.py  2_⚙️_Configuration.py  3_🎯_Génération.py  4_📈_Résultats.py  5_👥_Participants.py  6_🔗_Contraintes.py  7_💳_Pricing.py  8_✅_Paiement_Réussi.py
docs/: ARCHITECTURE_REVIEW_2026-01.md  MARKETING_SALES_STRATEGY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  STRIPE_TESTING_GUIDE.md  UX_IMPROVEMENTS.md  VALIDATION_REPORT_EPIC5.md  architecture-streamlit.md  architecture.md  brainstorming-session-results.md  epic3-completion.md  prd.md  roadmap-v2.md
docs/architecture/: checklist-results-report-architecture-validation.md  coding-standards.md  conclusion.md  décisions-techniques.md  gestion-des-erreurs-et-logging.md  index.md  interfaces-entre-modules.md  modèles-de-données.md  performance-et-scalabilité.md  plan-de-migration-post-mvp.md  stratégie-de-testing.md  structure-des-modules-python.md  table-des-matières.md  vue-densemble-de-larchitecture.md
docs/qa/assessments/: 1.4-test-design-20260125.md  2.3-test-design-20260125.md  GAP-ANALYSIS-20260125.md
docs/qa/gates/: 1.1-setup-initial.yml  1.2-structures-donnees.yml  1.3-validation.yml  1.4-baseline-algorithm.yml  1.5-meeting-history.yml  1.6-metrics-calculation.yml  1.7-integration-tests.yml  1.8-documentation.yml  2.1-evaluate-swap.yml  2.2-local-improvement.yml  2.3-enforce-equity.yml  2.4-pipeline-complet.yml  2.5-tests-performance.yml  2.6-tests-integration-optimized.yml  2.7-documentation-optimization.yml  3.1-exporteur-csv.yml  3.2-exporteur-json.yml  3.3-cli-interface.yml  3.4-documentation-cli.yml
docs/stories/: 1.1.setup-initial.story.md  1.2.structures-donnees.story.md  1.3.validation.story.md  1.4.baseline-algorithm.story.md  1.5.meeting-history.story.md  1.6.metrics-calculation.story.md  1.7.integration-tests.story.md  1.8.documentation.story.md  2.1.evaluate-swap.story.md  2.2.local-improvement.story.md  2.3.enforce-equity.story.md  2.4.pipeline-complet.story.md  2.5.tests-performance.story.md  2.6.tests-integration-optimized.story.md  2.7.documentation-optimization.story.md  3.1.exporteur-csv.story.md  3.2.exporteur-json.story.md  3.3.cli-interface.story.md  3.4.documentation-cli.story.md  4.0.streamlit-skeleton.story.md  4.1.import-participants.story.md  4.2.group-constraints.story.md  4.4.vip-priorities.story.md  5.1.display-participant-names.story.md  5.2.heatmap-meetings-matrix.story.md  5.3.graphs-visualization.story.md  5.4.export-pdf-report.story.md  5.5.dashboard-kpis-home.story.md
examples/: advanced_usage.py  basic_usage.py  participants_sample.csv
landing/: README.md  index.html  netlify.toml
scripts/: quick_test.sh  verify_stripe_config.sh
src/: __init__.py  analysis.py  baseline.py  cli.py  constraints_validator.py  display_utils.py  equity.py  exporters.py  improvement.py  meeting_history.py  metrics.py  models.py  participants.py  pdf_exporter.py  planner.py  swap_evaluation.py  telemetry.py  validation.py  visualizations.py
tests/: __init__.py  test_analysis.py  test_baseline.py  test_cli.py  test_constraints.py  test_display_utils.py  test_equity.py  test_exporters.py  test_improvement.py  test_integration.py  test_integration_optimized.py  test_meeting_history.py  test_metrics.py  test_models.py  test_participants.py  test_pdf_export.py  test_performance.py  test_planner.py  test_swap_evaluation.py  test_validation.py  test_vip.py  test_visualizations.py
