[tool.poetry]
name = "speed-dating-planner"
version = "0.1.0"
description = "Système d'optimisation de plannings pour événements de networking et speed dating"
authors = ["Speed Dating Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Core algorithm dependencies (stdlib-only, minimal)
# Note: Core algorithm (src/{baseline,improvement,equity,models,validation,metrics}.py)
# fonctionne avec stdlib Python uniquement sans dépendances externes.

# CLI dependencies (minimal)
python-dateutil = {version = "^2.9.0", optional = true}

# Streamlit UI dependencies
streamlit = {version = "^1.52.0", optional = true}
pandas = {version = "^2.3.0", optional = true}
numpy = {version = "^2.4.0", optional = true}

# Visualization dependencies
plotly = {version = "^6.5.0", optional = true}

# PDF export dependencies
reportlab = {version = "^4.4.0", optional = true}
kaleido = {version = "^1.2.0", optional = true}
pillow = {version = "^12.1.0", optional = true}

# Excel support
openpyxl = {version = "^3.1.0", optional = true}

# Payment processing
stripe = {version = "^11.3.0", optional = true}

[tool.poetry.extras]
# Installation modes (Poetry extras)
# Usage: pip install -e ".[MODE]"

# Mode CLI: Core algorithm + CLI interface (lightweight)
cli = ["python-dateutil"]

# Mode Streamlit: Interface web complète (sans PDF/payments)
streamlit = ["streamlit", "pandas", "numpy", "plotly", "python-dateutil"]

# Mode PDF: Export PDF professionnel
pdf = ["reportlab", "kaleido", "pillow"]

# Mode Excel: Import/export Excel
excel = ["openpyxl"]

# Mode Payments: Intégration Stripe
payments = ["stripe"]

# Mode Visualizations: Graphiques et heatmap
viz = ["plotly", "pandas", "numpy"]

# Mode Full: Toutes les fonctionnalités (production)
all = [
    "streamlit",
    "pandas",
    "numpy",
    "plotly",
    "reportlab",
    "kaleido",
    "pillow",
    "openpyxl",
    "stripe",
    "python-dateutil"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ruff = "^0.0.282"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[tool.poetry.scripts]
speed-dating-planner = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configuration Black
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

# Configuration Ruff
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports OK in __init__.py

# Configuration MyPy
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# Configuration Pytest
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Configuration Coverage
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
